--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,46 @@
+baseUrl = "https://www.dantuck.com/"
+languageCode = "en-us"
+title = "internet weblog"
+theme = "internet-weblog"
+pygmentsstyle = "emacs"
+Paginate = 10
+SectionPagesMenu = "main"
+
+[author]
+	Handle = "dantuck"
+	FirstName = "Daniel"
+	LastName = "Tucker"
+	AboutPage = "/about"
+	Location = "Conifer, CO"
+	FlickrID = ""
+
 [params]
-Description = "Internet weblog of Software Engineer, Daniel Tucker."
-RSSEnabled = true
-RSSMicropostTitles = false
-RSSSections = ["Posts", "Microposts", "Photos"]
-ShowCopyright = true
+    Description = "Internet weblog of Software Engineer, Daniel Tucker."
+    RSSEnabled = true
+    RSSMicropostTitles = false
+    RSSSections = ["Posts", "Microposts", "Photos"]
+    ShowCopyright = true
+
+
+[taxonomies]
+	tag = "tags"
+	category = "categories"
+	series = "series"
+
+[[menu.main]]
+	name = "Posts"
+	weight = 1
+	identifier = "posts"
+	url = "/posts/"
+
+[[menu.main]]
+	name = "Microposts"
+	weight = 2
+	identifier = "microposts"
+	url = "/microposts/"
+
+[[menu.main]]
+	name = "Photos"
+	weight = 3
+	identifier = "photos"
+	url = "/photos/"
