--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/internet-weblog"]
 	path = themes/internet-weblog
 	url = https://github.com/dantuck/internet-weblog.git
+[submodule "themes/bilberry-hugo-theme"]
+	path = themes/bilberry-hugo-theme
+	url = https://github.com/dantuck/bilberry-hugo-theme
