Update quote template so that title is not required.

--- a/.forestry/front_matter/templates/quote.yml
+++ b/.forestry/front_matter/templates/quote.yml
@@ -6,11 +6,10 @@ fields:
   label: Title
   name: title
   config:
-    required: true
+    required: false
 - type: datetime
   name: date
   label: Date
   config:
     required: true
 pages:
-- content/microposts/dantuck-relaunch.md
