Removed title requirement and changes it datatype to text

--- a/.forestry/front_matter/templates/quote.yml
+++ b/.forestry/front_matter/templates/quote.yml
@@ -3,9 +3,9 @@ label: quote
 hide_body: false
 is_partial: false
 fields:
-- type: datetime
-  label: Title
+- type: text
   name: title
+  label: Title
   config:
     required: false
 - type: datetime
@@ -13,4 +13,3 @@ fields:
   label: Date
   config:
     required: true
-pages:
