--- a/config.toml
+++ b/config.toml
@@ -51,7 +51,7 @@ disqusShortname = "dantuck"
     #gravatarEMail = "code@lednerb.de"
 
     # set an path to the image file you want to use | overwrites gravatar
-    customImage = ""
+    customImage = "daniel-headshot.jpg"
 
     # always display the top navigation (with pages and search) on non-mobile screens
     permanentTopNav = false
