--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/bilberry-hugo-theme"]
 	path = themes/bilberry-hugo-theme
-	url = https://gitlab.com/dantuck/www.dantuck-theme.git
+	url = git@gitlab.com:dantuck/www.dantuck-theme.git
