--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,16 @@ variables:
 
 pages:
   script:
+  # run ssh-agent
+  - eval $(ssh-agent -s)
+
+  # add ssh key stored in SSH_PRIVATE_KEY variable to the agent store
+  - bash -c 'ssh-add <(echo "$SSH_PRIVATE_KEY")'
+
+  - mkdir -p ~/.ssh
+  - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
+
+  
   - hugo
   artifacts:
     paths:
