--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,18 @@
-image: monachus/hugo
+# Official framework image. Look for the different tagged releases at:
+# https://hub.docker.com/r/library/node/tags/
+image: node:latest
 
-variables:
-  GIT_SUBMODULE_STRATEGY: recursive
+# This folder is cached between builds
+# http://docs.gitlab.com/ee/ci/yaml/README.html#cache
+cache:
+  paths:
+    - node_modules/
 
 pages:
   script:
-  - hugo
+  - npm install
   artifacts:
     paths:
-    - public
+    - _site
   only:
   - master
